syntax = "proto3";

package proto;

message Agent {
	string session_id = 1;
	string inner_gw   = 2;
	int64  online_at  = 3;
	bool   is_offline = 4;
	uint64 salt       = 5;
}

message Agents {
	repeated Agent	agents = 1;
}
