syntax = "proto3";

package types;

message SocketTotalReply {
    int32  conn_total   = 1;
}

message SocketPushArgs {
    string  session_id = 1;
    string  uri        = 2;
    bytes   body       = 3;
    int32   body_codec = 4;
}

message SocketMpushArgs {
    repeated MpushTarget target = 1;
    string  uri                 = 2;
    bytes   body                = 3;
    int32   body_codec          = 4;
}

message MpushTarget {
	string  session_id       = 1;
    string  additional_query = 2;
}

message SocketMpushReply {
    repeated string failure_session_ids = 1;
}

message SocketKickArgs {
    string  session_id = 1;
}

message SocketKickReply {
    bool  existed      = 1;
}

message WsTotalReply {
    int32  conn_total   = 1;
}

message WsPushArgs {
    string  session_id = 1;
    string  uri        = 2;
    bytes   body       = 3;
    int32   body_codec = 4;
}

message WsMpushArgs {
    repeated MpushTarget target = 1;
    string  uri                 = 2;
    bytes   body                = 3;
    int32   body_codec          = 4;
}

message WsMpushReply {
    repeated string failure_session_ids = 1;
}

message WsKickArgs {
    string  session_id = 1;
}

message WsKickReply {
    bool  existed      = 1;
}

message GwHosts {
    repeated string http   = 1;
    repeated string socket = 2;
    repeated string ws = 3;    
}
